--- a/beverages-core/build.gradle
+++ b/beverages-core/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile "de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.50.5"
 
     testCompile "junit:junit:4.12"
+    testCompile "org.hamcrest:hamcrest-all:1.3"
+    
 }
 
 mainClassName = 'org.kiirun.beverages.application.Application'
